--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "prettier": "1.16.4"
   },
   "dependencies": {
-    "drop-while": "^2.0.0",
-    "take-while": "^2.0.0"
+    "drop-while": "2.0.0",
+    "take-while": "2.0.0"
   }
 }
