--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,15 @@ language: node_js
 node_js:
   - 8
   - 10
+
+jobs:
+  include:
+    - stage: release
+      if: branch = master
+      node_js: 10
+      script: skip
+      deploy:
+        provider: script
+        skip_cleanup: true
+        script:
+          - npx semantic-release
