--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   "homepage": "https://github.com/landau/split-with",
   "devDependencies": {
     "@landau/eslint-config": "1.0.2",
+    "@semantic-release/changelog": "3.0.2",
+    "@semantic-release/npm": "5.1.4",
     "eslint": "5.16.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-plugin-import": "2.16.0",
