--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@landau/eslint-config": "1.0.2",
     "@semantic-release/changelog": "3.0.2",
+    "@semantic-release/git": "7.0.8",
     "@semantic-release/npm": "5.1.4",
     "eslint": "5.16.0",
     "eslint-config-prettier": "4.1.0",
