--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": ">= 10.0.0"
   },
   "scripts": {
-    "test": "nyc -s mocha -R dot test.js",
+    "test": "nyc -s node test.js",
     "posttest": "npm run -s view-cov && npm run -s check-cov && eslint .",
     "check-cov": "nyc check-coverage --lines 100 --functions 100 --branches 100",
     "html-cov": "nyc report --reporter=html",
@@ -45,11 +45,8 @@
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jsdoc": "23.0.1",
-    "eslint-plugin-mocha": "6.3.0",
     "eslint-plugin-prettier": "3.1.3",
-    "mocha": "7.1.1",
     "nyc": "15.0.1",
-    "predicate": "2.0.0",
     "prettier": "2.0.4",
     "semantic-release": "17.0.6"
   },
